--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,34 @@
     transform: rotate(360deg);
   }
 }
+
+.bg-home {
+  background-image: url(/public/background.jpg);
+  background-size: cover;
+  background-position: 50%;
+  height: 100vh;
+}
+.bg-overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, .6);
+}
+.bg-header {
+  z-index: 1030;
+  box-shadow: none;
+  border: 0;
+  transition: all .5s ease;
+  min-height: 62px;
+  background-color: #fff !important;
+  box-shadow: 0 10px 33px rgba(0, 0, 0, .9) !important;
+  position: fixed;
+  right: 0;
+  left: 0;
+  top: 0;
+      box-sizing: border-box;
+}
