--- a/src/App.css
+++ b/src/App.css
@@ -48,12 +48,11 @@
   justify-content: center;
   align-items: center;
   border-right: 2px dashed #007BFF;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 15px;
+  padding-right: 15px;
   line-height: 1.5;
   font-size: calc(5px + 2vmin);
   font-weight: 500;
-  color: white;
 }
 
 .test-leftPane{
@@ -61,7 +60,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 2px dashed #007BFF;
+  border-right: 2px dashed #007BFF;
 }
 
 .rightPane {
@@ -90,8 +89,10 @@
   justify-content: center;
 }
 .button-explanation {
-  padding: 15px 30px;
-  font-size: 1.2rem;
+  padding: 15px 15px 15px 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: #ffffff;
   background-color: white;
   border: none;
@@ -108,7 +109,7 @@
   padding: 15px 30px;
   font-size: 1.2rem;
   color: #ffffff;
-  background-color: #007BFF;
+  background-color: #8497aa;
   border: none;
   border-radius: 8px;
   cursor: pointer;
@@ -140,12 +141,12 @@
 }
 
 .button:active {
-  background-color: #0056b3;
+  background-color: #24486e;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 .button:hover {
-  background-color: #0056b3;
+  background-color: #24486e;
 }
 /* result icon */
 .res-grid-container {
@@ -210,4 +211,25 @@
   margin-left: 20px;
   margin-right: 20px;
   width: 100vw - 40px;
+}
+.btn-bottom-next {
+  position: absolute;
+  right: 20px;
+  bottom: 30px;
+  width: 100px;
+  height: 35px;
+  cursor: pointer;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+  padding: 0;
+  background-color: #252d35;
+}
+.p-game-result {
+  margin-top: 0;
+  padding-top: 15px;
+  align-items: center;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 800;
+  line-height: 1.5;
 }
