--- a/src/App.css
+++ b/src/App.css
@@ -140,7 +140,7 @@
   transition: none;
 }
 
-.button:active {
+.button:active, .button.active {
   background-color: #24486e;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
@@ -148,6 +148,11 @@
 .button:hover {
   background-color: #24486e;
 }
+
+img {
+  filter: blur(0) !important;
+}
+
 /* result icon */
 .res-grid-container {
   display: grid;
@@ -232,4 +237,34 @@
   font-size: 18px;
   font-weight: 800;
   line-height: 1.5;
+}
+.headerbar{
+  display: flex;
+  align-items: center;
+  padding-left: 20px;
+  padding-right: 10px;
+  font-size: 18px;
+  font-weight: bolder;
+  position:fixed;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 50px;
+  background-color: #0000008f;
+  z-index: 999;
+}
+.wrong-click{
+  font-weight: 800;
+  padding-right: 10px;
+  justify-content: center;
+  padding-left: 10px;
+  color: white;
+  align-items: center;
+  display: flex;
+  position: fixed;
+  right: 30px;
+  top: 60px;
+  width: 50px;
+  height: 50px;
+  background-color: red;
 }
